Wasn't able to push my changes

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -440,43 +440,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "21d56b17": {
-          "id": "21d56b17",
-          "path": "js/functions/modals/appearSuccessMessage.js",
-          "output": "js/functions/modals/appearSuccessMessage-dist.js",
-          "name": "appearSuccessMessage.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "25ad6d80": {
           "id": "25ad6d80",
           "path": "js/functions/modals/collectData.js",
           "output": "js/functions/modals/collectData-dist.js",
           "name": "collectData.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "cae603b0": {
-          "id": "cae603b0",
-          "path": "js/functions/modals/loadProfileInputs.js",
-          "output": "js/functions/modals/loadProfileInputs-dist.js",
-          "name": "loadProfileInputs.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -504,22 +472,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "c031d21a": {
-          "id": "c031d21a",
-          "path": "js/functions/modals/loadInputsText.js",
-          "output": "js/functions/modals/loadInputsText-dist.js",
-          "name": "loadInputsText.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "3b1f7ef0": {
           "id": "3b1f7ef0",
           "path": "js/functions/modals/positionInformationDiv.js",
@@ -536,43 +488,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "96d8df7e": {
-          "id": "96d8df7e",
-          "path": "js/functions/modals/openClose.js",
-          "output": "js/functions/modals/openClose-dist.js",
-          "name": "openClose.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "863febc1": {
           "id": "863febc1",
           "path": "js/functions/modals/updateProfile.js",
           "output": "js/functions/modals/updateProfile-dist.js",
           "name": "updateProfile.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "e71e0f7b": {
-          "id": "e71e0f7b",
-          "path": "js/functions/modals/datePickerInit.js",
-          "output": "js/functions/modals/datePickerInit-dist.js",
-          "name": "datePickerInit.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -1211,11 +1131,107 @@
           ],
           "type": "jade"
         },
+        "529f8a83": {
+          "id": "529f8a83",
+          "path": "js/functions/modals/delete/function.js",
+          "output": "js/functions/modals/delete/function-dist.js",
+          "name": "function.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
         "8c87a4b0": {
           "id": "8c87a4b0",
           "path": "js/functions/modals/create/createGigBox.js",
           "output": "js/functions/modals/create/createGigBox-dist.js",
           "name": "createGigBox.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "7b935f51": {
+          "id": "7b935f51",
+          "path": "js/functions/modals/initializing/modalInputs.js",
+          "output": "js/functions/modals/initializing/modalInputs-dist.js",
+          "name": "modalInputs.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "c96ca99e": {
+          "id": "c96ca99e",
+          "path": "js/functions/modals/initializing/successMessage.js",
+          "output": "js/functions/modals/initializing/successMessage-dist.js",
+          "name": "successMessage.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "b6ce78cb": {
+          "id": "b6ce78cb",
+          "path": "js/functions/modals/initializing/datePickers.js",
+          "output": "js/functions/modals/initializing/datePickers-dist.js",
+          "name": "datePickers.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "c002aa93": {
+          "id": "c002aa93",
+          "path": "js/functions/modals/open/function.js",
+          "output": "js/functions/modals/open/function-dist.js",
+          "name": "function.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "f6d6172e": {
+          "id": "f6d6172e",
+          "path": "js/functions/modals/initializing/profileModalInputs.js",
+          "output": "js/functions/modals/initializing/profileModalInputs-dist.js",
+          "name": "profileModalInputs.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -1243,11 +1259,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "7b935f51": {
-          "id": "7b935f51",
-          "path": "js/functions/modals/initializing/modalInputs.js",
-          "output": "js/functions/modals/initializing/modalInputs-dist.js",
-          "name": "modalInputs.js",
+        "505ed52a": {
+          "id": "505ed52a",
+          "path": "js/functions/modals/open/modal.js",
+          "output": "js/functions/modals/open/modal-dist.js",
+          "name": "modal.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
