Load more gigs when you scroll down + gig inner modal

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1274,6 +1274,26 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "b05caab0": {
+          "id": "b05caab0",
+          "path": "styles/newstyles/gig-inner.sass",
+          "output": "styles/newstyles/gig-inner.css",
+          "name": "gig-inner.sass",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "59fd29df"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
