Fixed edit gig modal, added new colors to search bar, etc.

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1294,6 +1294,22 @@
             "59fd29df"
           ],
           "type": "sass"
+        },
+        "f08a3534": {
+          "id": "f08a3534",
+          "path": "js/functions/modals/load/searchGigs.js",
+          "output": "js/functions/modals/load/searchGigs-dist.js",
+          "name": "searchGigs.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
