Prepros.cfg again

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1131,21 +1131,23 @@
           ],
           "type": "jade"
         },
-        "529f8a83": {
-          "id": "529f8a83",
-          "path": "js/functions/modals/delete/function.js",
-          "output": "js/functions/modals/delete/function-dist.js",
-          "name": "function.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
+        "b05caab0": {
+          "id": "b05caab0",
+          "path": "styles/newstyles/gig-inner.sass",
+          "output": "styles/newstyles/gig-inner.css",
+          "name": "gig-inner.sass",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
           "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
           "customOutput": false,
           "imported": false,
           "parents": [],
-          "type": "javascript"
+          "type": "sass"
         },
         "8c87a4b0": {
           "id": "8c87a4b0",
@@ -1163,11 +1165,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "7b935f51": {
-          "id": "7b935f51",
-          "path": "js/functions/modals/initializing/modalInputs.js",
-          "output": "js/functions/modals/initializing/modalInputs-dist.js",
-          "name": "modalInputs.js",
+        "529f8a83": {
+          "id": "529f8a83",
+          "path": "js/functions/modals/delete/function.js",
+          "output": "js/functions/modals/delete/function-dist.js",
+          "name": "function.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -1179,11 +1181,43 @@
           "parents": [],
           "type": "javascript"
         },
-        "c96ca99e": {
-          "id": "c96ca99e",
-          "path": "js/functions/modals/initializing/successMessage.js",
-          "output": "js/functions/modals/initializing/successMessage-dist.js",
-          "name": "successMessage.js",
+        "178693ed": {
+          "id": "178693ed",
+          "path": "js/functions/modals/load/moreGigsScrollDown.js",
+          "output": "js/functions/modals/load/moreGigsScrollDown-dist.js",
+          "name": "moreGigsScrollDown.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "f08a3534": {
+          "id": "f08a3534",
+          "path": "js/functions/modals/load/searchGigs.js",
+          "output": "js/functions/modals/load/searchGigs-dist.js",
+          "name": "searchGigs.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "f78b496d": {
+          "id": "f78b496d",
+          "path": "js/functions/modals/create/gigInner.js",
+          "output": "js/functions/modals/create/gigInner-dist.js",
+          "name": "gigInner.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -1211,11 +1245,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "c002aa93": {
-          "id": "c002aa93",
-          "path": "js/functions/modals/open/function.js",
-          "output": "js/functions/modals/open/function-dist.js",
-          "name": "function.js",
+        "7b935f51": {
+          "id": "7b935f51",
+          "path": "js/functions/modals/initializing/modalInputs.js",
+          "output": "js/functions/modals/initializing/modalInputs-dist.js",
+          "name": "modalInputs.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -1243,6 +1277,22 @@
           "parents": [],
           "type": "javascript"
         },
+        "c96ca99e": {
+          "id": "c96ca99e",
+          "path": "js/functions/modals/initializing/successMessage.js",
+          "output": "js/functions/modals/initializing/successMessage-dist.js",
+          "name": "successMessage.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
         "1278135d": {
           "id": "1278135d",
           "path": "js/functions/modals/collectData/gig.js",
@@ -1259,11 +1309,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "505ed52a": {
-          "id": "505ed52a",
-          "path": "js/functions/modals/open/modal.js",
-          "output": "js/functions/modals/open/modal-dist.js",
-          "name": "modal.js",
+        "c002aa93": {
+          "id": "c002aa93",
+          "path": "js/functions/modals/open/function.js",
+          "output": "js/functions/modals/open/function-dist.js",
+          "name": "function.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -1275,31 +1325,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "b05caab0": {
-          "id": "b05caab0",
-          "path": "styles/newstyles/gig-inner.sass",
-          "output": "styles/newstyles/gig-inner.css",
-          "name": "gig-inner.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "59fd29df"
-          ],
-          "type": "sass"
-        },
-        "f08a3534": {
-          "id": "f08a3534",
-          "path": "js/functions/modals/load/searchGigs.js",
-          "output": "js/functions/modals/load/searchGigs-dist.js",
-          "name": "searchGigs.js",
+        "505ed52a": {
+          "id": "505ed52a",
+          "path": "js/functions/modals/open/modal.js",
+          "output": "js/functions/modals/open/modal-dist.js",
+          "name": "modal.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
