Updates to gig page and search engine

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1137,7 +1137,7 @@
           "output": "styles/newstyles/gig-inner.css",
           "name": "gig-inner.sass",
           "category": "CSS",
-          "autoCompile": true,
+          "autoCompile": false,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -1145,25 +1145,11 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": false,
-          "parents": [],
+          "imported": true,
+          "parents": [
+            "59fd29df"
+          ],
           "type": "sass"
-        },
-        "8c87a4b0": {
-          "id": "8c87a4b0",
-          "path": "js/functions/modals/create/createGigBox.js",
-          "output": "js/functions/modals/create/createGigBox-dist.js",
-          "name": "createGigBox.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
         },
         "529f8a83": {
           "id": "529f8a83",
@@ -1181,11 +1167,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "178693ed": {
-          "id": "178693ed",
-          "path": "js/functions/modals/load/moreGigsScrollDown.js",
-          "output": "js/functions/modals/load/moreGigsScrollDown-dist.js",
-          "name": "moreGigsScrollDown.js",
+        "8c87a4b0": {
+          "id": "8c87a4b0",
+          "path": "js/functions/modals/create/createGigBox.js",
+          "output": "js/functions/modals/create/createGigBox-dist.js",
+          "name": "createGigBox.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -1197,27 +1183,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "f08a3534": {
-          "id": "f08a3534",
-          "path": "js/functions/modals/load/searchGigs.js",
-          "output": "js/functions/modals/load/searchGigs-dist.js",
-          "name": "searchGigs.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "f78b496d": {
-          "id": "f78b496d",
-          "path": "js/functions/modals/create/gigInner.js",
-          "output": "js/functions/modals/create/gigInner-dist.js",
-          "name": "gigInner.js",
+        "1278135d": {
+          "id": "1278135d",
+          "path": "js/functions/modals/collectData/gig.js",
+          "output": "js/functions/modals/collectData/gig-dist.js",
+          "name": "gig.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -1261,22 +1231,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "f6d6172e": {
-          "id": "f6d6172e",
-          "path": "js/functions/modals/initializing/profileModalInputs.js",
-          "output": "js/functions/modals/initializing/profileModalInputs-dist.js",
-          "name": "profileModalInputs.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "c96ca99e": {
           "id": "c96ca99e",
           "path": "js/functions/modals/initializing/successMessage.js",
@@ -1293,11 +1247,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "1278135d": {
-          "id": "1278135d",
-          "path": "js/functions/modals/collectData/gig.js",
-          "output": "js/functions/modals/collectData/gig-dist.js",
-          "name": "gig.js",
+        "f6d6172e": {
+          "id": "f6d6172e",
+          "path": "js/functions/modals/initializing/profileModalInputs.js",
+          "output": "js/functions/modals/initializing/profileModalInputs-dist.js",
+          "name": "profileModalInputs.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -1330,6 +1284,54 @@
           "path": "js/functions/modals/open/modal.js",
           "output": "js/functions/modals/open/modal-dist.js",
           "name": "modal.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "f78b496d": {
+          "id": "f78b496d",
+          "path": "js/functions/modals/create/gigInner.js",
+          "output": "js/functions/modals/create/gigInner-dist.js",
+          "name": "gigInner.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "178693ed": {
+          "id": "178693ed",
+          "path": "js/functions/modals/load/moreGigsScrollDown.js",
+          "output": "js/functions/modals/load/moreGigsScrollDown-dist.js",
+          "name": "moreGigsScrollDown.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "f08a3534": {
+          "id": "f08a3534",
+          "path": "js/functions/modals/load/searchGigs.js",
+          "output": "js/functions/modals/load/searchGigs-dist.js",
+          "name": "searchGigs.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
