Updated gigs page and gig modals

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -339,26 +339,6 @@
           ],
           "type": "sass"
         },
-        "91204b8f": {
-          "id": "91204b8f",
-          "path": "styles/dropdowns.sass",
-          "output": "styles/dropdowns.css",
-          "name": "dropdowns.sass",
-          "category": "CSS",
-          "autoCompile": false,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "59fd29df"
-          ],
-          "type": "sass"
-        },
         "c8e1f1f1": {
           "id": "c8e1f1f1",
           "path": "images/background-buildings.png",
@@ -874,19 +854,6 @@
           ],
           "type": "sass"
         },
-        "14c59cad": {
-          "id": "14c59cad",
-          "path": "mixins/gigs-content.jade",
-          "output": "mixins/gigs-content.html",
-          "name": "gigs-content.jade",
-          "category": "HTML",
-          "autoCompile": true,
-          "pretty": true,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "jade"
-        },
         "2ac09678": {
           "id": "2ac09678",
           "path": "mixins/pages/gigs.jade",
@@ -1342,6 +1309,48 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "ba4bb174": {
+          "id": "ba4bb174",
+          "path": "js/functions/modals/load/loadGigsOnAjaxSuccess.js",
+          "output": "js/functions/modals/load/loadGigsOnAjaxSuccess-dist.js",
+          "name": "loadGigsOnAjaxSuccess.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "42b77035": {
+          "id": "42b77035",
+          "path": "images/favicon.png",
+          "output": "images/favicon.png",
+          "name": "favicon.png",
+          "category": "IMAGE",
+          "size": 1418,
+          "type": "png",
+          "initialSize": 1418,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "de676728": {
+          "id": "de676728",
+          "path": "images/logo.png",
+          "output": "images/logo.png",
+          "name": "logo.png",
+          "category": "IMAGE",
+          "size": 110006,
+          "type": "png",
+          "initialSize": 110006,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
