Changes to the profile page. Gigs will show up in your profile page, added portfolio elements, some other little things

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -626,14 +626,11 @@
           "output": "mixins/tabs/profile.html",
           "name": "profile.jade",
           "category": "HTML",
-          "autoCompile": false,
+          "autoCompile": true,
           "pretty": true,
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "d2e2602f",
-            "7155957b"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "jade"
         },
         "bd9a3eb3": {
@@ -1336,6 +1333,99 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "ef63b3d9": {
+          "id": "ef63b3d9",
+          "path": "mixins/modals/portfolio/add-portfolio.jade",
+          "output": "mixins/modals/portfolio/add-portfolio.html",
+          "name": "add-portfolio.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "0eb83059": {
+          "id": "0eb83059",
+          "path": "mixins/modals/portfolio/edit-portfolio.jade",
+          "output": "mixins/modals/portfolio/edit-portfolio.html",
+          "name": "edit-portfolio.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "d2e2602f"
+          ],
+          "type": "jade"
+        },
+        "4b952325": {
+          "id": "4b952325",
+          "path": "js/functions/modals/create/createGigToProfile.js",
+          "output": "js/functions/modals/create/createGigToProfile-dist.js",
+          "name": "createGigToProfile.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "373fbf88": {
+          "id": "373fbf88",
+          "path": "mixins/tabs/orders.jade",
+          "output": "mixins/tabs/orders.html",
+          "name": "orders.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "7155957b"
+          ],
+          "type": "jade"
+        },
+        "9e1208bd": {
+          "id": "9e1208bd",
+          "path": "js/functions/modals/create/createPortfolio.js",
+          "output": "js/functions/modals/create/createPortfolio-dist.js",
+          "name": "createPortfolio.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "71fcfdef": {
+          "id": "71fcfdef",
+          "path": "js/functions/modals/collectData/portfolio.js",
+          "output": "js/functions/modals/collectData/portfolio-dist.js",
+          "name": "portfolio.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
