--- a/ethnode/apidef/swagger/v1.yaml
+++ b/ethnode/apidef/swagger/v1.yaml
@@ -137,7 +137,7 @@ paths:
   /dht/guids:
     get:
       tags:
-      - "DHT Guids"
+      - "DHT Network"
       summary: "Listing of known profile identities GUIDS"
       description: "Known identities with pubkeys"
       operationId: "dhtGuids"
@@ -155,7 +155,7 @@ paths:
   /dht/ip4/:
     get:
       tags:
-      - "DHT Guids"
+      - "DHT Network"
       summary: "Listing of DHT UDP peers"
       description: "Last known peers in dht"
       operationId: "dhtIP4Peers"
@@ -172,7 +172,7 @@ paths:
   /dht/node/:
     get:
       tags:
-      - "DHT Hash"
+      - "DHT Network"
       summary: "Infromation about node"
       description: "Information about node"
       operationId: "dhtNode"
@@ -242,47 +242,7 @@ paths:
         203:
           description: "Updated"
         400:
-          description: "Someting wrong"
-  /cdn/resource:
-    get:
-      tags:
-      - "CDN"
-      summary: "get cdn resource"
-      description: "Post and retrieve self or foreign Portfolio"
-      operationId: "getResource"
-      produces:
-      - "*/*"
-      parameters:
-      - name: "hkey"
-        in: "query"
-        description: "retrieve resource by hkey"
-        required: true
-        type: "string"
-        maxLength: 64
-        minLength: 64
-      responses:
-        200:
-          description: "ok"
-        400:
-          description: "err"
-    post:
-      tags:
-      - "CDN"
-      summary: Uploads a file.
-      consumes:
-        - multipart/form-data
-      parameters:
-        - in: formData
-          name: ufile
-          type: file
-          description: The file to upload.
-      responses:
-        201:
-          description: "object created"
-          schema:
-            type: "string"
-            maxLength: 64
-            minLength: 64
+          description: "something wrong"
 
 definitions:
   GeneralDomainOfExpertise:
