You can change your profile avatar, profile settings, add portfolio. Gigs now show up in your profile in GIGS tab, also there's a new tab called ORDERS. Lots of changes to how we store and load images, many bugs fixed and many code upgrades.

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1426,6 +1426,22 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "fdb32205": {
+          "id": "fdb32205",
+          "path": "js/functions/modals/collectData/profile.js",
+          "output": "js/functions/modals/collectData/profile-dist.js",
+          "name": "profile.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
