Bug fixes + portfolio data saving, loading

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -24,6 +24,22 @@
           ],
           "type": "jade"
         },
+        "47088459": {
+          "id": "47088459",
+          "path": "js/functions/getData/nodeData.js",
+          "output": "js/functions/getData/nodeData-dist.js",
+          "name": "nodeData.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
         "83964324": {
           "id": "83964324",
           "path": "mixins/countries.jade",
@@ -899,22 +915,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "2a7f79fa": {
-          "id": "2a7f79fa",
-          "path": "js/functions/modals/create/createGig.js",
-          "output": "js/functions/modals/create/createGig-dist.js",
-          "name": "createGig.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "d4db61e1": {
           "id": "d4db61e1",
           "path": "mixins/modals/education/edit-education.jade",
@@ -1419,6 +1419,54 @@
           "path": "js/functions/modals/collectData/profile.js",
           "output": "js/functions/modals/collectData/profile-dist.js",
           "name": "profile.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "cc62a118": {
+          "id": "cc62a118",
+          "path": "js/functions/getData/gigData.js",
+          "output": "js/functions/getData/gigData-dist.js",
+          "name": "gigData.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "36b19721": {
+          "id": "36b19721",
+          "path": "js/functions/getData/guidsData.js",
+          "output": "js/functions/getData/guidsData-dist.js",
+          "name": "guidsData.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "021d83d7": {
+          "id": "021d83d7",
+          "path": "js/functions/getData/profileGigs.js",
+          "output": "js/functions/getData/profileGigs-dist.js",
+          "name": "profileGigs.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
