Portfolios load on profile page

--- a/ethnode/webui/prepros.cfg
+++ b/ethnode/webui/prepros.cfg
@@ -1477,6 +1477,38 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "62a0cb0c": {
+          "id": "62a0cb0c",
+          "path": "js/functions/modals/load/portfolios.js",
+          "output": "js/functions/modals/load/portfolios-dist.js",
+          "name": "portfolios.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "f399a9c4": {
+          "id": "f399a9c4",
+          "path": "js/functions/getData/profilePortfolios.js",
+          "output": "js/functions/getData/profilePortfolios-dist.js",
+          "name": "profilePortfolios.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
